@@ -5,7 +5,7 @@
 .\" *                            | (__| |_| |  _ <| |___
 .\" *                             \___|\___/|_| \_\_____|
 .\" *
-.\" * Copyright (C) 1998 - 2007, Daniel Stenberg, <daniel@haxx.se>, et al.
+.\" * Copyright (C) 1998 - 2008, Daniel Stenberg, <daniel@haxx.se>, et al.
 .\" *
 .\" * This software is licensed as described in the file COPYING, which
 .\" * you should have received as part of this distribution. The terms
@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: libcurl-errors.3,v 1.30 2007-10-03 08:07:50 bagder Exp $
+.\" * $Id: libcurl-errors.3,v 1.31 2008-05-12 21:43:28 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH libcurl-errors 3 "30 Aug 2007" "libcurl 7.17.0" "libcurl errors"
@@ -208,6 +208,10 @@ The resource referenced in the URL does not exist
 An unspecified error occurred during the SSH session
 .IP "CURLE_SSL_SHUTDOWN_FAILED (80)"
 Failed to shut down the SSL connection
+.IP "CURLE_AGAIN (81)"
+Socket is not ready for send/recv wait till it's ready and try again. This
+return code is only returned from \fIcurl_easy_recv(3)\fP and
+\fIcurl_easy_send(3)\fP (Added in 7.18.2)
 .IP "CURLE_OBSOLETE*"
 These error codes will never be returned. They used to be used in an old libcurl
 version and are currently unused.
